--- a/NLP1.ipynb
+++ b/NLP1.ipynb
@@ -345,3 +345,25 @@
             "fault → ['f', 'a', 'u', 'l', 't_']\n",
             "pipelines → ['p', 'i', 'p', 'e', 'l', 'ine', 's_']\n",
             "reliable → ['re', 'l', 'i', 'a', 'b', 'le_']\n"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "name": "NLP1.ipynb",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
